--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-
-
-
-    <script src="./assets/js/script.js"></script>
+    <div id="gameContent">
+        <canvas id="playArea" width="500" height="500"></canvas>
+        <div id="scoreNumber">0</div>
+        <button id="btnReset">Reset</button>
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
