--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
-    
-    <script src="./assets/js/"></script>
+  <input type="text" id="search-video">
+  <button id="search-btn">Search</button>
+
+<iframe id="video-frame" width="560" height="315" src="https://www.youtube.com/embed/uU0BOyQRjWM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
