Add js to project

--- a/homepage.html
+++ b/homepage.html
@@ -24,12 +24,12 @@
       </header>
       <main>
         <aside>
-          <button class="secondary">Click here to add a song</button>
+          <button id = "modal-trigger" class="secondary">Click here to add a song</button>
         </aside>
-        <!-- <dialog open>
+        <dialog>
           <article>
             <header>
-              <button aria-label="Close" rel="prev"></button>
+              <button id = "close" aria-label="Close" rel="prev"></button>
               <p>
                 <strong>Write your song here!</strong>
               </p>
@@ -42,8 +42,9 @@
               <button>Submit</button>
             </form>
           </article>
-        </dialog> -->
+        </dialog>
       </main>
     </figure>
+    <script src="../Project1/assets/js/script.js"></script>
   </body>
 </html>
