--- a/homepage.html
+++ b/homepage.html
@@ -18,33 +18,34 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <figure>
-      <header class="main-header">
-        <h1>Fav Songs!</h1>
-      </header>
-      <main>
-        <aside>
-          <button id = "modal-trigger" class="secondary">Click here to add a song</button>
-        </aside>
-        <dialog>
-          <article>
-            <header>
-              <button id = "close" aria-label="Close" rel="prev"></button>
-              <p>
-                <strong>Write your song here!</strong>
-              </p>
-            </header>
-            <form>
-              <label for="title">Title:</label>
-              <input type="text" id="title" name="title" />
-              <label for="artist">Artist</label>
-              <input type="text" id="artist" name="artist" />
-              <button>Submit</button>
-            </form>
-          </article>
-        </dialog>
-      </main>
-    </figure>
+    <header class="main-header">
+      <h1>Fav Songs!</h1>
+    </header>
+    <picture>
+      <img src="./assets/images/alphacolor-XdDyRTVo-iw-unsplash.jpg" >
+    </picture>
+    <main>
+      <aside>
+        <button id = "modal-trigger" class="secondary">Click here to add a song</button>
+      </aside>
+      <dialog>
+        <article>
+          <header>
+            <button id = "close" aria-label="Close" rel="prev"></button>
+            <p>
+              <strong>Write your song here!</strong>
+            </p>
+          </header>
+          <form>
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" />
+            <label for="artist">Artist</label>
+            <input type="text" id="artist" name="artist" />
+            <button>Submit</button>
+          </form>
+        </article>
+      </dialog>
+    </main>
     <script src="../Project1/assets/js/script.js"></script>
   </body>
 </html>
