made corrections to read me

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main class="container">
 
     <header class="grid" id="header">
-      <input type="search" id="search-video">
+      <input type="search" id="search-song">
       <button class="pico-background-blue-850" id="search-btn">Search</button>
     </header>
 
