--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main class="container">
 
     <!-- Button for search form modal -->
-    <header class="grid" id="search">
+    <header class="grid" id="header">
       <button id="searchModalBtn" class="contrast">Search for a new song</button>
     </header>
 
