--- a/homepage.html
+++ b/homepage.html
@@ -33,15 +33,15 @@
           <header>
             <button id = "close" aria-label="Close" rel="prev"></button>
             <p>
-              <strong>Write your song here!</strong>
+              <strong >Write your song here!</strong>
             </p>
           </header>
           <form>
             <label for="title">Title:</label>
-            <input type="text" id="title" name="title" />
-            <label for="artist">Artist</label>
-            <input type="text" id="artist" name="artist" />
-            <button>Submit</button>
+            <input type="text" id="title" name="title" placeholder="Song Name"/>
+            <label for="artist">Artist:</label>
+            <input type="text" id="artist" name="artist" placeholder="Artist Name"/>
+            <button class="secondary" type="submit" id="searchModalBtn">Submit</button>
           </form>
         </article>
       </dialog>
