--- a/index.html
+++ b/index.html
@@ -1,76 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Song Searcher</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-
-<body>
-  <main class="container">
-
-    <!-- Button for search form modal -->
-    <header class="grid" id="header">
-      <button class="secondary" id="searchModalBtn" class="contrast">Search for a new song</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home Page</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/homepage.css" />
+  </head>
+  <body>
+    <header class="main-header">
+      <h1>Fav Songs!</h1>
     </header>
-
-    <dialog id="searchModal">
-      <article>
-        <header class="modalHeader">
-          <h2 id="newSong">Search for a new song</h2>
-          <button id="searchCloseBtn" aria-label="Close" class="secondary">X</button>
-        </header>
-        <form id="searchForm">
-          <label for="title">Title:</label>
-          <input type="text" id="title" name="title" placeholder="Song Title" />
-          <label for="artist">Artist:</label>
-          <input type="text" id="artist" name="artist" placeholder="Artist Name" />
-          <button class="secondary" type="submit">Search</button>
-        </form>
-      </article>
-    </dialog>
-
-    <section>
-      <header>
-        <h2>Listening To Now:</h2>
-      </header>
-
-
-      <!-- Spotify player -->
-      <iframe id="spotifyPlayer" src="https://open.spotify.com/embed/track/29U7stRjqHU6rMiS8BfaI9" width="100%"
-        height="200" frameborder="0" allowtransparency="true" allow="encrypted-media">
-      </iframe>
-    </section>
-
-
-    <!-- Lyrics -->
-    <section>
-      <dialog id="dialog">
-        <article id="lyricModal">
-          <h2>Lyrics:</h2>
-          <p id="lyricContent"></p>
-          <footer>
-            <button id="closeBtn" class="secondary">
-              Close
-            </button>
-          </footer>
+    <picture>
+      <img src="./assets/images/alphacolor-XdDyRTVo-iw-unsplash.jpg" >
+    </picture>
+    <main>
+      <aside>
+        <button id = "modal-trigger" class="secondary">Click here to add a song</button>
+      </aside>
+      <dialog>
+        <article>
+          <header>
+            <button id = "close" aria-label="Close" rel="prev"></button>
+            <p>
+              <strong >Write your song here!</strong>
+            </p>
+          </header>
+          <form>
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" placeholder="Song Name"/>
+            <label for="artist">Artist:</label>
+            <input type="text" id="artist" name="artist" placeholder="Artist Name"/>
+            <button class="secondary" type="submit" id="searchModalBtn">Submit</button>
+          </form>
         </article>
       </dialog>
-      <p id="lyricsFrame"></p>
-    </section>
-
-    <footer>
-      <h4>Thanks For Listening</h4>
-    </footer>
-
-  </main>
-  <script src="./assets/js/script.js"></script>
-</body>
-
+    </main>
+    <script src="../Project1/assets/js/homepage.js"></script>
+  </body>
 </html>
